@@ -6,11 +6,8 @@ import android.app.AlertDialog;
 import android.content.Context;
 import android.content.DialogInterface;
 import android.content.Intent;
-import android.content.res.Configuration;
 import android.os.Bundle;
 import android.os.Handler;
-import android.util.Log;
-import android.view.Display;
 import android.view.GestureDetector;
 import android.view.KeyEvent;
 import android.view.Menu;
@@ -31,6 +28,7 @@ abstract public class SliderActivity extends ModuleActivity {
 
 	private ArrayList<String> jumpTitles = new ArrayList<String>();
 	private ArrayList<String> headerTitles = new ArrayList<String>();
+	private SliderListAdapter mSliderListAdapter = new SliderListAdapter();
 	
 	protected GestureDetector mFlingDetector;
 
@@ -51,7 +49,7 @@ abstract public class SliderActivity extends ModuleActivity {
 	static final int SCROLL_DURATION_PER_SCREEN = 250;
 	static final int SCROLL_MAX_DURATION = 2500;
 	
-	private SliderView.OnPositionChangedListener mSliderActivityPositionChangedListener = null;
+	private SliderListAdapter.OnPositionChangedListener mSliderActivityPositionChangedListener = null;
 	
 	public void setJumpTitle(String jumpTitle, int jumpMenuIconId) {
 		mJumpTitle = jumpTitle;
@@ -73,14 +71,15 @@ abstract public class SliderActivity extends ModuleActivity {
 					jumpTitles.toArray(titlesArray);
 					
 					builder.setItems(titlesArray, new DialogInterface.OnClickListener() {
+						@Override
 						public void onClick(DialogInterface dialog, int item) {
-							mSliderView.snapToPosition(item);
+						    	mSliderListAdapter.seekTo(item);
 						}
 					});
 					
 					AlertDialog alert = builder.create();
 					alert.show();
-					alert.getListView().setSelection(mSliderView.getPosition());
+					alert.getListView().setSelection(mSliderListAdapter.getPosition());
 					
 				} else {
 					builder.setTitle("Too Fast!");
@@ -95,7 +94,7 @@ abstract public class SliderActivity extends ModuleActivity {
 	}
 	
 	protected void prepareJumpOptionsMenu(Menu menu) {
-		if(mJumpTitle != null && mSliderView.getScreenCount() > 1) {
+		if(mJumpTitle != null && mSliderListAdapter.getScreenCount() > 1) {
 			menu.add(MENU_MAIN_GROUP, MENU_JUMP, Menu.NONE, mJumpTitle)
 				.setIcon(mJumpMenuIconId);
 		}
@@ -116,11 +115,8 @@ abstract public class SliderActivity extends ModuleActivity {
 		ctx = this;
 		
 		mWasRotated = (Boolean) getLastNonConfigurationInstance();
-        
-        Display display = getWindowManager().getDefaultDisplay(); 
-        mSliderView.setWidth(display.getWidth());
 
-        mSliderView.setOnPositionChangedListener(new SliderView.OnPositionChangedListener() {
+		mSliderListAdapter.setOnPositionChangedListener(new SliderListAdapter.OnPositionChangedListener() {
 			@Override
 			public void onPositionChanged(int newPosition, int oldPosition) {
 				mSliderTitleBar.setLeftArrowEnabled(!mSliderView.isAtBeginning());
@@ -182,7 +178,7 @@ abstract public class SliderActivity extends ModuleActivity {
     protected void onSaveInstanceState(Bundle outState) {
     	super.onSaveInstanceState(outState);
     	
-    	outState.putInt(KEY_POSITION_SAVED, mSliderView.getPosition());
+    	outState.putInt(KEY_POSITION_SAVED, mSliderListAdapter.getPosition());
     	
     }
     
@@ -193,43 +189,32 @@ abstract public class SliderActivity extends ModuleActivity {
     
 	@Override
 	public Object onRetainNonConfigurationInstance() {
-	    final Boolean rotated = new Boolean(true);  // TODO may need to confirm
+	    //final Boolean rotated = new Boolean(true);  // TODO may need to confirm
+		final Boolean rotated = Boolean.valueOf(true);
 	    return rotated;
 	}
 	
-	@Override
-	public void onConfigurationChanged(Configuration newConfig) {
-		super.onConfigurationChanged(newConfig);
-        Display display = getWindowManager().getDefaultDisplay(); 
-        mSliderView.onWidthChanged(display.getWidth());		
-	}
-	
 	protected void addScreen(SliderInterface sliderInterface, String jumpTitle, String headerTitle) {
-		Log.d(TAG,"jumpTitle = " + jumpTitle);
-		Log.d(TAG,"headerTitle = " + headerTitle);
 		jumpTitles.add(jumpTitle);
 		headerTitles.add(headerTitle);
-		mSliderView.addScreen(sliderInterface);
+		mSliderListAdapter.addScreen(sliderInterface);
 		
-		if(mSliderView.getScreenCount() > 1) {
+		if(mSliderListAdapter.getScreenCount() > 1) {
 			mSliderTitleBar.showArrows();
 		}
 	}
 	
-	public void freezeScroll() {
-		mSliderView.freezeScroll();
-	}
+	public void freezeScroll() { }
 	
-	public void unfreezeScroll() {
-		mSliderView.unfreezeScroll();		
-	}
+	public void unfreezeScroll() { }
 
 	protected void setPosition(int position) {
-		mSliderView.setPosition(position);
+	    mSliderListAdapter.setPosition(position);
+	    mSliderView.refreshScreens();
 	}
 	
 	protected int getPosition() {
-		return mSliderView.getPosition();
+		return mSliderListAdapter.getPosition();
 	}
 	
 	protected int getPositionValue() {
@@ -247,7 +232,7 @@ abstract public class SliderActivity extends ModuleActivity {
 	}
 	
 	protected View getScreen(int position) {
-		return mSliderView.getScreen(position);
+		return mSliderListAdapter.getScreen(position);
 	}
 	
 	@Override
@@ -266,8 +251,6 @@ abstract public class SliderActivity extends ModuleActivity {
 	protected void onResume() {
 		super.onResume();
 		
-		mSliderView.start();
-		
 		// not sure why, but sometimes when activities
 		// are resumed it scrolls to the previous FrameLayout
 		// this is a fix for that
@@ -284,13 +267,7 @@ abstract public class SliderActivity extends ModuleActivity {
 		
 	}
 	
-	@Override
-	protected void onStop() {
-		super.onStop();
-		mSliderView.stop();
-	}
-	
-	protected void setOnPositionChangedListener(SliderView.OnPositionChangedListener positionChangedListener) {
+	protected void setOnPositionChangedListener(SliderListAdapter.OnPositionChangedListener positionChangedListener) {
 		mSliderActivityPositionChangedListener = positionChangedListener;
 	}
 	
